--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^12.12.28",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@xmpp/client": "^0.11.1",
+    "@xmpp/debug": "^0.11.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
+    "simple-xmpp": "^1.3.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
