Working message sending and receiving. Subscribe works aswell

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^16.9.5",
     "@xmpp/client": "^0.11.1",
     "@xmpp/debug": "^0.11.0",
+    "bootstrap": "^4.4.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
     "simple-xmpp": "^1.3.1",
